crates/parser/src/snapshots/parser__tests__parse_inline_err@0138_by_ded_no_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "( by (!claim A))\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0138_by_ded_no_expr.ath
---
BY_DED
  L_PAREN "("
  WHITESPACE " "
  BY_KW "by"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      IDENTIFIER
        IDENT "claim"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "A"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"
error 1: expected an expression

