crates/parser/src/snapshots/parser__tests__parse_inline_err@0141_or_expr_error.ath.snap
---
source: crates/parser/src/tests.rs
description: "(|| bar domain D)\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0141_or_expr_error.ath
---
OR_EXPR
  L_PAREN "("
  PIPE2 "||"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "bar"
  WHITESPACE " "
  ERROR
    DOMAIN_KW "domain"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "D"
  R_PAREN ")"
  WHITESPACE "\n"
error 8: Expected to find a phrase in the or expression

