crates/parser/src/snapshots/parser__tests__parse_inline_err@0142_seq_expr_error.ath.snap
---
source: crates/parser/src/tests.rs
description: "(seq bar domain D)\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0142_seq_expr_error.ath
---
SEQ_EXPR
  L_PAREN "("
  SEQ_KW "seq"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "bar"
  WHITESPACE " "
  ERROR
    DOMAIN_KW "domain"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "D"
  R_PAREN ")"
  WHITESPACE "\n"
error 9: Expected to find a phrase in the seq expression

