crates/parser/src/snapshots/parser__tests__parse_inline_err@0151_prefix_match_expr_no_scrutinee.ath.snap
---
source: crates/parser/src/tests.rs
description: "(match (A B))\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0151_prefix_match_expr_no_scrutinee.ath
---
APPLICATION_EXPR
  L_PAREN "("
  INFIX_MATCH_EXPR
    MATCH_KW "match"
    WHITESPACE " "
    EXPR_PHRASE
      APPLICATION_EXPR
        L_PAREN "("
        IDENT_EXPR
          IDENTIFIER
            IDENT "A"
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            IDENTIFIER
              IDENT "B"
        R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"
error 12: Expected to find clauses for the match

